--- a/app/src/main/res/layout/item_add_user.xml
+++ b/app/src/main/res/layout/item_add_user.xml
@@ -1,9 +1,34 @@
-<?xml version="1.0" encoding="utf-8"?>
-<ImageView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/addUserImage"
-    android:layout_width="70dp"
-    android:layout_height="70dp"
-    android:src="@drawable/add_user"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:clickable="true"
-    android:focusable="true"/>
+    android:focusable="true">
+
+    <ImageView
+        android:id="@+id/addUserImage"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="5dp"
+        android:clickable="true"
+        android:contentDescription="@string/avatar"
+        android:focusable="true"
+        android:src="@drawable/add_user"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/addText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/comixloud"
+        android:gravity="center"
+        android:text="@string/add_user"
+        android:textSize="5sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/addUserImage" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
