--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="beige">#F8F3D9</color>
+    <color name="beige_shadow">#EEF8F3D9</color>
+    <color name="blue">#044B83</color>
+    <color name="red">#FF0000</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="background_color">#FCECD3</color>
@@ -8,6 +12,7 @@
     <color name="light_blue_shadow">#EB66A4AB</color>
     <color name="dark_orange">#F7BD65</color>
     <color name="darker_orange">#DEA551</color>
+    <color name="dark_orange_shadow">#E7F7BD65</color>
     <color name="light_font">#FBFBFB</color>
     <color name="grey_font">#ff9e9e9e</color>
     <color name="text_shadow">#7F000000</color>
