--- a/app/src/main/res/layout/patient_registration_page.xml
+++ b/app/src/main/res/layout/patient_registration_page.xml
@@ -22,131 +22,59 @@
             android:padding="15dp">
 
             <include
-                android:id="@+id/commonFields"
-                layout="@layout/common_fields_register"
+                android:id="@+id/commonPatientFields"
+                layout="@layout/common_patient_fields"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <EditText
-                android:id="@+id/age"
-                android:layout_width="0dp"
-                android:layout_height="70dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:backgroundTint="@color/light_blue_shadow"
-                android:fontFamily="@font/comixloud"
-                android:hint="Edad"
-                android:inputType="number"
-                android:textColor="@color/beige"
-                android:textColorHint="@color/beige_shadow"
-                android:textSize="14sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/commonFields" />
-
-            <TextView
+            <LinearLayout
+                android:id="@+id/buttonListUsers"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:text="*"
-                android:textColor="@color/red"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="@id/age"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/age" />
-
-            <EditText
-                android:id="@+id/observations"
-                android:layout_width="0dp"
-                android:layout_height="70dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:backgroundTint="@color/light_blue_shadow"
-                android:fontFamily="@font/comixloud"
-                android:hint="Observaciones"
-                android:inputType="textMultiLine"
-                android:textColor="@color/beige"
-                android:textColorHint="@color/beige_shadow"
-                android:textSize="14sp"
+                android:layout_marginTop="15dp"
+                android:gravity="center"
+                android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/age" />
+                app:layout_constraintTop_toBottomOf="@id/commonPatientFields">
 
+                <Button
+                    android:id="@+id/start"
+                    android:layout_width="150dp"
+                    android:layout_height="35dp"
+                    android:layout_margin="4dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/button_selector"
+                    android:fontFamily="@font/comixloud"
+                    android:shadowColor="@color/text_shadow"
+                    android:shadowDx="2"
+                    android:shadowDy="2"
+                    android:shadowRadius="3"
+                    android:text="@string/register"
+                    android:textColor="@color/light_font"
+                    android:textSize="10sp"
+                    android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/genreTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:fontFamily="@font/comixloud"
-                android:text="Genero"
-                android:textColor="@color/beige"
-                android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/observations"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:text="*"
-                android:textColor="@color/red"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="@id/genreTitle"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/genreTitle" />
-
-            <RadioGroup
-                android:id="@+id/patientGenre"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/genreTitle">
-
-                <RadioButton
-                    android:id="@+id/male"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="6dp"
-                    android:fontFamily="@font/comixregular"
-                    android:text="Hombre"
-                    android:textColor="@color/beige"
-                    android:textSize="15sp" />
-
-                <RadioButton
-                    android:id="@+id/female"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="6dp"
-                    android:fontFamily="@font/comixregular"
-                    android:text="Mujer"
-                    android:textColor="@color/beige"
-                    android:textSize="15sp" />
-            </RadioGroup>
-
-            <Button
-                android:id="@+id/start"
-                android:layout_width="220dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="16dp"
-                android:background="@drawable/button_selector"
-                android:fontFamily="@font/comixloud"
-                android:text="@string/register"
-                android:textColor="@color/light_font"
-                android:textSize="14sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/patientGenre" />
-
+                <Button
+                    android:id="@+id/cancel"
+                    android:layout_width="150dp"
+                    android:layout_height="35dp"
+                    android:layout_margin="4dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/button_selector"
+                    android:fontFamily="@font/comixloud"
+                    android:shadowColor="@color/text_shadow"
+                    android:shadowDx="2"
+                    android:shadowDy="2"
+                    android:shadowRadius="3"
+                    android:text="@string/cancel"
+                    android:textColor="@color/light_font"
+                    android:textSize="10sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
