--- a/app/src/main/res/layout/therapist_config_page.xml
+++ b/app/src/main/res/layout/therapist_config_page.xml
@@ -30,6 +30,37 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <TextView
+                android:id="@+id/actionsAccount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:fontFamily="@font/comixloud"
+                android:text="Acciones en cuenta"
+                android:textColor="@color/beige"
+                android:textSize="14sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/commonFields" />
+
+            <Button
+                android:id="@+id/delete"
+                android:layout_width="200dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/button_selector"
+                android:fontFamily="@font/comixloud"
+                android:shadowColor="@color/text_shadow"
+                android:shadowDx="2"
+                android:shadowDy="2"
+                android:shadowRadius="3"
+                android:text="@string/deleteAccount"
+                android:textColor="@color/light_font"
+                android:textSize="10sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/actionsAccount" />
+
+
             <LinearLayout
                 android:id="@+id/buttonListUsers"
                 android:layout_width="wrap_content"
@@ -39,10 +70,10 @@
                 android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/commonFields">
+                app:layout_constraintTop_toBottomOf="@id/delete">
 
                 <Button
-                    android:id="@+id/start"
+                    android:id="@+id/modify"
                     android:layout_width="150dp"
                     android:layout_height="35dp"
                     android:layout_margin="4dp"
@@ -53,7 +84,7 @@
                     android:shadowDx="2"
                     android:shadowDy="2"
                     android:shadowRadius="3"
-                    android:text="@string/register"
+                    android:text="@string/modify"
                     android:textColor="@color/light_font"
                     android:textSize="10sp"
                     android:textStyle="bold" />
