--- a/app/src/main/res/layout/common_fields_register.xml
+++ b/app/src/main/res/layout/common_fields_register.xml
@@ -4,12 +4,24 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <TextView
+        android:id="@+id/nameTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/name_title_add"
+        android:textColor="@color/white"
+        android:textSize="14sp"
+        android:fontFamily="@font/comixloud"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:backgroundTint="@color/light_blue_shadow"
         android:fontFamily="@font/comixloud"
@@ -17,10 +29,10 @@
         android:inputType="textPersonName"
         android:textColor="@color/beige"
         android:textColorHint="@color/beige_shadow"
-        android:textSize="14sp"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/nameTitle" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -33,12 +45,24 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/name" />
 
+    <TextView
+        android:id="@+id/surnameTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/surname_title_add"
+        android:textColor="@color/white"
+        android:textSize="14sp"
+        android:fontFamily="@font/comixloud"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/name" />
+
     <EditText
         android:id="@+id/surname"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:backgroundTint="@color/light_blue_shadow"
         android:fontFamily="@font/comixloud"
@@ -46,10 +70,10 @@
         android:inputType="textPersonName"
         android:textColor="@color/beige"
         android:textColorHint="@color/beige_shadow"
-        android:textSize="14sp"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/name" />
+        app:layout_constraintTop_toBottomOf="@id/surnameTitle" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -68,9 +92,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/comixloud"
-        android:text="Avatar"
-        android:textColor="@color/beige"
-        android:textSize="15sp"
+        android:text="- Avatar"
+        android:textColor="@color/white"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/surname" />
@@ -133,7 +157,6 @@
         android:id="@+id/avatarSecondRow"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
