Arreglo algunos errores con respecto al boton de regreso y agrego la funcionalidad de eliminar pacientes y terapeutas.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -92,6 +92,9 @@
         <action
             android:id="@+id/action_PatientConfigPage_to_UserManagementPage"
             app:destination="@id/UserManagementPage" />
+        <action
+            android:id="@+id/action_PatientConfigPage_to_UserSelectionPage"
+            app:destination="@id/UserSelectionPage" />
     </fragment>
     <fragment
         android:id="@+id/TherapistConfigPage"
@@ -105,5 +108,8 @@
                 android:name="selectedUser"
                 app:argType="com.example.juegosdidacticos_limpiezadecaballo.data.model.NamedEntity" />
         </action>
+        <action
+            android:id="@+id/action_TherapistConfigPage_to_UserSelectionPage"
+            app:destination="@id/UserSelectionPage" />
     </fragment>
 </navigation>
