--- a/app/src/main/res/layout/main_page.xml
+++ b/app/src/main/res/layout/main_page.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -18,7 +19,6 @@
         app:defaultNavHost="true"
         app:navGraph="@navigation/nav_graph" />
 
-    <!-- Back Button -->
     <ImageView
         android:id="@+id/backButton"
         android:layout_width="64dp"
@@ -28,7 +28,5 @@
         android:contentDescription="@string/back_button"
         android:clickable="true"
         android:focusable="true"
-        app:tint="@color/dark_orange"
-        android:visibility="gone"
-        />
+        android:visibility="gone" />
 </FrameLayout>
