--- a/app/src/main/res/layout/patient_registration_page.xml
+++ b/app/src/main/res/layout/patient_registration_page.xml
@@ -35,51 +35,24 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <LinearLayout
-                    android:id="@+id/buttonListUsers"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
-                    android:gravity="center"
-                    android:orientation="horizontal"
+                <Button
+                    android:id="@+id/register"
+                    android:layout_width="230dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/button_selector"
+                    android:fontFamily="@font/comixloud"
+                    android:shadowColor="@color/text_shadow"
+                    android:shadowDx="2"
+                    android:shadowDy="2"
+                    android:shadowRadius="3"
+                    android:text="@string/register"
+                    android:textColor="@color/light_font"
+                    android:textSize="15sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/commonPatientFields">
+                    app:layout_constraintTop_toBottomOf="@id/commonPatientFields" />
 
-                    <Button
-                        android:id="@+id/start"
-                        android:layout_width="150dp"
-                        android:layout_height="35dp"
-                        android:layout_margin="4dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/button_selector"
-                        android:fontFamily="@font/comixloud"
-                        android:shadowColor="@color/text_shadow"
-                        android:shadowDx="2"
-                        android:shadowDy="2"
-                        android:shadowRadius="3"
-                        android:text="@string/register"
-                        android:textColor="@color/light_font"
-                        android:textSize="10sp"
-                        android:textStyle="bold" />
-
-                    <Button
-                        android:id="@+id/cancel"
-                        android:layout_width="150dp"
-                        android:layout_height="35dp"
-                        android:layout_margin="4dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/button_selector"
-                        android:fontFamily="@font/comixloud"
-                        android:shadowColor="@color/text_shadow"
-                        android:shadowDx="2"
-                        android:shadowDy="2"
-                        android:shadowRadius="3"
-                        android:text="@string/cancel"
-                        android:textColor="@color/light_font"
-                        android:textSize="10sp"
-                        android:textStyle="bold" />
-                </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
